<resources>
    <string name="app_name">StoreRunner</string>
    <string name="title_home">Categories</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_discounts">Discounts</string>
    <string name="title_aboutus">About Us</string>
    <string name="title_cart">Cart</string>
    <string name="item_list">Item List</string>
    <string name="price"> Price: %1$s $ </string>
    <string name="stock"> %1$s available in stock </string>
    <string name="item_number"> Item number: %1$s </string>
    <string name="category_number"> Category number: %1$s </string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>